syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ivanas.helloworldclient.service";

service HelloWorldService {
  rpc SayHelloWorld (HelloWorldRequest) returns (HelloWorldReturn) {
  }
}

message HelloWorldRequest {
  string params = 1;
}

message HelloWorldReturn {
  string return = 1;
}
